# Autonomous_UAV_ROS_Unity

./: .gitmodules  LICENSE  README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/controller_pkg/: CMakeLists.txt  README.md
catkin_ws/src/controller_pkg/config/: controller_params.yaml
catkin_ws/src/controller_pkg/launch/: controller.launch
catkin_ws/src/controller_pkg/src/: controller_node.cpp  traj_publisher.cpp
catkin_ws/src/depth_image_proc/launch/: test.launch
catkin_ws/src/mapping/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/mapping/launch/: mapping.launch  octomap_2d.launch  octomap_3d.launch  rviz.launch
catkin_ws/src/mapping/launch/config/: default.rviz
catkin_ws/src/mapping/maps/: big_environment.yaml  range10big_env.yaml  small_environment.yaml  small_environment_resolution_0.2.yaml
catkin_ws/src/navigation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/navigation/include/: AStar.hpp  ClusterCenter.h  Navigation.h
catkin_ws/src/navigation/launch/: navigation.launch
catkin_ws/src/navigation/src/: ClusterCenter.cpp  navigation.cc  navigation_node.cc
catkin_ws/src/simulation/: CMakeLists.txt  README.md
catkin_ws/src/simulation/launch/: mission.launch  simulation.launch  unity_ros.launch
catkin_ws/src/simulation/scripts/: sim_mission.sh  start_pixhawk.sh  start_unity.sh
catkin_ws/src/simulation/src/: depth_camera_parser.h  fisheye_camera_parser.h  imu_parser.h  rgb_camera_parser.h  state_estimate_corruptor_node.cpp  true_state_parser.h  unity_ros.cpp  w_to_unity.cpp
catkin_ws/src/simulation/src/unity/: DepthCamera.cs  FisheyeCamera.cs  IMU.cs  ObjectRecognitionServer.cs  Pixhawk.cs  Propeller.cs  Quadrotor.cs  QuadrotorSimulator.unitypackage  RGBCamera.cs  RecognizableObject.cs  RenderCubemap.cs  RenderDepth.shader  RenderFisheye.cs  RenderFisheye.shader  Spawner.cs  TimeServer.cs
catkin_ws/src/vision_pkg/: CMakeLists.txt  README.md
catkin_ws/src/vision_pkg/launch/: vision.launch
catkin_ws/src/vision_pkg/src/: vision_node.cpp
docker/: Dockerfile  README.md
