<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shervin@todo.todo">chris</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>mav_planning_msgs</build_depend>
  <build_depend>mav_trajectory_generation</build_depend>
  <build_depend>mav_trajectory_generation_ros</build_depend>
  <build_depend>mav_visualization</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>eigen_catkin</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>mav_planning_msgs</build_export_depend>
  <build_export_depend>mav_trajectory_generation</build_export_depend>
  <build_export_depend>mav_trajectory_generation_ros</build_export_depend>
  <build_export_depend>mav_visualization</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>eigen_catkin</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>mav_planning_msgs</exec_depend>
  <exec_depend>mav_trajectory_generation</exec_depend>
  <exec_depend>mav_trajectory_generation_ros</exec_depend>
  <exec_depend>mav_visualization</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
